--- a/shapr-server/package.json
+++ b/shapr-server/package.json
@@ -22,6 +22,7 @@
     "redis-cli": "^1.4.0"
   },
   "dependencies": {
+    "@koa/multer": "^3.0.0",
     "@koa/router": "^9.0.1",
     "dotenv": "^8.2.0",
     "knex": "^0.21.1",
@@ -29,6 +30,9 @@
     "koa-bodyparser": "^4.3.0",
     "koa-pino-logger": "^3.0.0",
     "koa-respond": "^2.1.0",
+    "koa-send": "^5.0.0",
+    "koa-static": "^5.0.0",
+    "multer": "^1.4.2",
     "nanoid": "^3.1.10",
     "pg": "^8.2.1",
     "pino": "^6.3.2",
