--- a/shapr-server/package.json
+++ b/shapr-server/package.json
@@ -22,15 +22,16 @@
     "redis-cli": "^1.4.0"
   },
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "@koa/multer": "^3.0.0",
     "@koa/router": "^9.0.1",
     "dotenv": "^8.2.0",
     "knex": "^0.21.1",
     "koa": "^2.12.1",
     "koa-bodyparser": "^4.3.0",
+    "koa-mount": "^4.0.0",
     "koa-pino-logger": "^3.0.0",
     "koa-respond": "^2.1.0",
-    "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
     "multer": "^1.4.2",
     "nanoid": "^3.1.10",
