--- a/shapr-client/public/manifest.json
+++ b/shapr-client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Shapr3D",
-  "name": "Convert app",
+  "name": "Converter app",
   "icons": [
     {
       "src": "favicon.ico",
