--- a/shapr-server/package.json
+++ b/shapr-server/package.json
@@ -25,7 +25,9 @@
     "@koa/cors": "^3.1.0",
     "@koa/multer": "^3.0.0",
     "@koa/router": "^9.0.1",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "form-data": "^3.0.0",
     "ioredis": "^4.17.3",
     "knex": "^0.21.1",
     "koa": "^2.12.1",
