--- a/shapr-server/.env
+++ b/shapr-server/.env
@@ -1,10 +1,10 @@
 PORT = 3000
 
-PG_HOST=gambjo-database.c87cgmvpvzmp.eu-central-1.rds.amazonaws.com
-PG_USER=father
-PG_PASS=changethis
+PG_HOST=localhost
+PG_USER=postgres
+PG_PASS=najib
 PG_DATABASE=shapr
-PG_VERSION=12.2
+PG_VERSION=12.3
 
 RD_HOST=localhost
 RD_PORT=6379
